# system-design

./: .gitignore  CHANGELOG.md  CONTENT_GUARDRAILS.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  ROADMAP.md  STYLE_GUIDE.md  mkdocs.yml  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: config.yml  correction.md  decision-tree.md  diagram.md  docs.md  lab.md  walkthrough.md
.github/workflows/: docs-checks.yml  docs-site.yml
docs/: glossary.md  index.md
docs/communication/: dead-letter-queues.md  idempotency.md  index.md  outbox-pattern.md  polling-vs-websockets-vs-sse.md  pub-sub.md  queues.md  rest-vs-grpc.md  retries-and-backoff.md  saga-pattern.md  streams.md  (+2 more)
labs/: README.md
labs/cache-aside-demo/: README.md  design.md  expected-output.md  how-to-run.md  pyproject.toml  tradeoffs.md  what-to-observe.md
labs/cache-aside-demo/src/cache_aside_demo/: __init__.py  demo.py  model.py
labs/cache-aside-demo/tests/: test_cache_aside.py
labs/hot-key-demo/: README.md  design.md  expected-output.md  how-to-run.md  pyproject.toml  tradeoffs.md  what-to-observe.md
labs/hot-key-demo/src/hot_key_demo/: __init__.py  demo.py  model.py
labs/hot-key-demo/tests/: test_hot_key.py
labs/rate-limiter/: README.md  design.md  expected-output.md  how-to-run.md  pyproject.toml  tradeoffs.md  what-to-observe.md
labs/rate-limiter/src/rate_limiter_lab/: __init__.py  bucket.py  demo.py
labs/rate-limiter/tests/: test_token_bucket.py
scripts/: check-taxonomy  generate-index
templates/: README.md  architecture-diagram-template.md  capacity-estimation-template.md  decision-record-template.md  decision-tree-template.md  design-critique-template.md  design-doc-template.md  project-reflection-template.md  sequence-diagram-template.md  walkthrough-template.md
templates/lab-template/: README.md  design.md  expected-output.md  how-to-run.md  pyproject.toml  tradeoffs.md  what-to-observe.md
templates/lab-template/src/lab_template/: __init__.py  demo.py
templates/lab-template/tests/: test_demo.py
(+208 files in other folders)
