[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "system-design-hot-key-demo"
version = "0.1.0"
description = "Hot-key load skew demo for the System Design Decision Cookbook."
requires-python = ">=3.11"
dependencies = []

[project.optional-dependencies]
test = ["pytest>=8,<9"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
