[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "system-design-rate-limiter-lab"
version = "0.1.0"
description = "Token bucket rate limiter lab for the System Design Decision Cookbook."
requires-python = ">=3.11"
dependencies = []

[project.optional-dependencies]
test = ["pytest>=8,<9"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
